# sovri-sdk-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  deny.toml  lefthook.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  dependency-review.yml
docs/: branch-protection.md
scripts/: check-action-pins.sh  check-docs.sh  check-headers.sh  check-offline-setup.sh  no-secrets.sh
src/: lib.rs
