[package]
name = "sovri-sdk"
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
description = "Sovri SDK — shared types and agent/cloud integration contracts (placeholder)."
repository = "https://github.com/Sovri/sovri-sdk-rust"
readme = "README.md"
publish = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
